[package]
name = "hfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
fuse = "0.3.1"
time = "0.1"
libc = "0.2"
anyhow = "1.0.52"
env_logger = "0.9.0"
